# spj-nano

./: .env.example  .gitignore  Dockerfile  README.md  app.py  compose.yml  main.py  pyproject.toml
data/: calendar_tenpaku.csv  model_params.json
docs/: B1F事前分析レポート.md  B1F混雑予測システム.pptx  B1F混雑予測システム_Webサーバーとダッシュボード.pptx  B1F混雑予測システム_データ収集.pptx  B1F混雑予測システム_改訂版.pptx  B1F混雑予測システム_機械学習.pptx  Jetsonセットアップ手順.md  センサーシステム概要.md  作業計画.md
models/lgbm/: metadata.json  model_120m.txt  model_15m.txt  model_180m.txt  model_30m.txt  model_60m.txt
scripts/: backfill.py  check_api.py  check_app.py  check_calendar.py  check_database.py  check_forecast.py  check_levels.py  check_lgbm_confusion.py  check_preprocess.py  collect.py  extract_calendar.py  predict_lgbm.py  recompute.py  server.py  train_lgbm.py
spj_nano/: airoco.py  calendar.py  db.py  features.py  forecast.py  levels.py  lgbm_forecast.py  preprocess.py
web/: main.py
web/static/: app.js  index.html  mobile-test.html  style.css
