[project]
name = "spj-nano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
]
streamlit = [
    "streamlit>=1.58.0",
    "plotly>=6.8.0",
]
